# UA-CS-BSc2_Advanced-Programming-Doodle-Jump

./: CMakeLists.txt  README.md
.circleci/: config.yml
doxygen/html/: _abstract_factory_8h.html  _abstract_factory_8h_source.html  _b_g_tile_8cpp.html  _b_g_tile_8cpp.js  _b_g_tile_8h.html  _b_g_tile_8h.js  _b_g_tile_8h_source.html  _b_g_tile_observer_8h.html  _b_g_tile_observer_8h_source.html  _b_g_tile_tex_manager_8cpp.html  _b_g_tile_tex_manager_8h.html  _b_g_tile_tex_manager_8h_source.html  _b_g_tile_view_8cpp.html  _b_g_tile_view_8cpp.js  _b_g_tile_view_8h.html  _b_g_tile_view_8h_source.html  _bonus_8cpp.html  _bonus_8cpp.js  _bonus_8h.html  _bonus_8h.js  _bonus_8h_source.html  _camera_8cpp.html  _camera_8h.html  _camera_8h.js  _camera_8h_source.html  _concrete_factory_8cpp.html  _concrete_factory_8h.html  _concrete_factory_8h_source.html  _entities_8h.html  _entities_8h_source.html  _entity_8cpp.html  _entity_8h.html  _entity_8h_source.html  _game_8cpp.html  _game_8cpp.js  _game_8h.html  _game_8h_source.html  _observer_8h.html  _observer_8h.js  _observer_8h_source.html  (+265 more)
doxygen/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  (+41 more)
doxygen/latex/: _abstract_factory_8h.tex  _abstract_factory_8h_source.tex  _b_g_tile_8cpp.tex  _b_g_tile_8h.tex  _b_g_tile_8h_source.tex  _b_g_tile_observer_8h.tex  _b_g_tile_observer_8h_source.tex  _b_g_tile_tex_manager_8cpp.tex  _b_g_tile_tex_manager_8h.tex  _b_g_tile_tex_manager_8h_source.tex  _b_g_tile_view_8cpp.tex  _b_g_tile_view_8h.tex  _b_g_tile_view_8h_source.tex  _bonus_8cpp.tex  _bonus_8h.tex  _bonus_8h_source.tex  _camera_8cpp.tex  _camera_8h.tex  _camera_8h_source.tex  _concrete_factory_8cpp.tex  _concrete_factory_8h.tex  _concrete_factory_8h_source.tex  _entities_8h.tex  _entities_8h_source.tex  _entity_8cpp.tex  _entity_8h.tex  _entity_8h_source.tex  _game_8cpp.tex  _game_8h.tex  _game_8h_source.tex  _observer_8h.tex  _observer_8h_source.tex  _observers_8h.tex  _observers_8h_source.tex  _platform_8cpp.tex  _platform_8h.tex  _platform_8h_source.tex  _platform_observer_8h.tex  _platform_observer_8h_source.tex  _platform_tex_manager_8cpp.tex  (+129 more)
recourses/: Game.info
src/: BGTile.cpp  BGTile.h  Bonus.cpp  Bonus.h  Camera.cpp  Random.cpp  Stopwatch.cpp  Stopwatch.h  World.cpp  World.h  logicMain.cpp  main.cpp
src/Entities/: Platform.h  Player.cpp  Player.h
src/GameLogic/: Camera.h  Game.cpp  Game.h
src/controllers/: Controller.cpp  Controller.h  Controllers.h  WorldController.cpp  WorldController.h
src/controllers/entityControllers/: BGTileController.cpp  BGTileController.h  BonusController.cpp  BonusController.h  PlatformController.cpp  PlatformController.h  PlatformsController.cpp  PlatformsController.h  PlayerController.cpp  PlayerController.h
src/entities/: BGTile.h  Bonus.cpp  Bonus.h  Entity.cpp  Entity.h  Platform.cpp  Platform.h  Player.cpp  Player.h
src/entities/background/: BGTile.cpp  BGTile.h
src/factories/: AbstractFactory.h  ConcreteFactory.cpp  ConcreteFactory.h
src/factories/modelFactories/: AbstractFactory.h  ConcreteFactory.cpp  ConcreteFactory.h
src/factories/viewFactories/: ViewAbstractFactory.h  ViewConcreteFactory.cpp  ViewConcreteFactory.h
src/gameLogic/: Camera.cpp  Camera.h  Score.cpp  Score.h  World.cpp  World.h
src/graphics/: Game.cpp  Game.h
src/models/: Entities.h  Entity.cpp  Entity.h
src/models/entities/: BGTile.cpp  BGTile.h  Bonus.cpp  Bonus.h  Platform.cpp  Platform.h  Player.cpp  Player.h
src/observers/: Observer.cpp  Observer.h  Observers.h
src/observers/entityObservers/: BGTileObserver.cpp  BGTileObserver.h  PlatformObserver.cpp  PlatformObserver.h  PlayerObserver.cpp  PlayerObserver.h  ScoreObserver.cpp  ScoreObserver.h  WorldObserver.cpp  WorldObserver.h
src/textureManagers/: TextureManager.cpp  TextureManager.h  TextureManagers.h
src/textureManagers/entityTexManagers/: BGTileTexManager.cpp  BGTileTexManager.h  PlatformTexManager.cpp  PlatformTexManager.h  PlayerTexManager.cpp  PlayerTexManager.h
src/utilities/: Random.h  Stopwatch.cpp  Stopwatch.h  Utilities.cpp  Utilities.h
src/views/: BGTileView.cpp  BGTileView.h  PlatformView.cpp  PlatformView.h  PlayerView.cpp  PlayerView.h  View.h  Views.h
